# chimera-sdk

./: CMakeLists.txt
branch/dev--ita_test/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
branch/dev--ita_test/api/: api.html
branch/dev--ita_test/api/api_cmake/: api_cmake.html
branch/dev--ita_test/api/api_hal/: api_hal.html
branch/dev--ita_test/api/api_ll/: api_ll.html  api_ll_devices.html  api_ll_drivers.html
branch/dev--ita_test/usage/: build.html  structure.html  usage.html
branch/pr--optimize_compilation/: .buildinfo  genindex.html  index.html  objects.inv  search.html
branch/pr--optimize_compilation/api/: api.html
branch/pr--optimize_compilation/api/api_cmake/: api_cmake.html
branch/pr--optimize_compilation/api/api_hal/: api_hal.html
branch/pr--optimize_compilation/api/api_ll/: api_ll.html  api_ll_devices.html  api_ll_drivers.html
branch/pr--optimize_compilation/usage/: build.html  structure.html  usage.html
branch/pr--readme/: .buildinfo  genindex.html  index.html  objects.inv  search.html
branch/pr--readme/api/: api.html
branch/pr--readme/api/api_cmake/: api_cmake.html
branch/pr--readme/api/api_hal/: api_hal.html
branch/pr--readme/usage/: build.html  structure.html  usage.html
cmake/: Utils.cmake
hal/: CMakeLists.txt
targets/chimera-convolve/: CMakeLists.txt
targets/chimera-host/: CMakeLists.txt
tests/chimera-convolve/: CMakeLists.txt
tests/chimera-convolve/snitchCluster/: CMakeLists.txt
tests/chimera-convolve/snitchCluster/simpleITA/: CMakeLists.txt
tests/chimera-convolve/snitchCluster/simpleITA/include/: ita.h
tests/chimera-convolve/snitchCluster/simpleITA/src_cluster/: test_cluster.c
tests/chimera-convolve/snitchCluster/simpleITA/src_host/: test_host.c
(+5 files in other folders)
